# chainer-transformer

./: .gitignore  README.md  README.rst  precommit  pyproject.toml  setup.py
chainer_transformer/: dataset.py  functions.py  links.py  model.py  trainer.py  util.py
chainer_transformer/tools/: convert_vectors_into_npy.py  generate_trainval_split.py
docker/dataset/: Dockerfile
scripts/: build_docker_image.sh  download_dataset.sh  encode_text.py  generate_bpe.sh  index_tokens.sh  tokenize_en_de.sh  train_model.py
src/: model.py
tests/: test_functions.py  test_links.py  test_model.py  test_util.py
