[tool.poetry]
name = "chainer-transformer"
version = "0.1.0"
description = ""
authors = ["enceladus-rex"]

[tool.poetry.dependencies]
python = "^3.6"
chainer = "^7.4.0"
subword-nmt = "^0.3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
yapf = "^0.30.0"
pytest = "^5.4.3"

[tool.poetry.extras]
gpu = ["wheel", "cupy"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
